# steelbrick

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  definitions.lua
assets/scripts/: main.lua
assets/shaders/: default.hlsl
source/: bindings.cpp  bindings.hpp  debug.hpp  hashmap.hpp  json.cpp  json.hpp  luax.cpp  luax.hpp  main.cpp  program.cpp  program.hpp  sdlx.cpp  sdlx.hpp  thash.hpp
source/bindings/: color.cpp  color.hpp  commandbuffer.cpp  commandbuffer.hpp  copypass.cpp  copypass.hpp  pipeline.cpp  pipeline.hpp  renderpass.cpp  renderpass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
tests/: json.cpp
